--- a/UI Day1/index.html
+++ b/UI Day1/index.html
@@ -12,18 +12,23 @@
     <div class="container">
         <h2>Billing details</h2>
         <form action="onlick()" class="billing-details">
-            <div class="one">
+            <div class="form">
                 <label for="first-name">First Name</label>
-                <input type="text"> <label for="last-name">Last Name</label>
                 <input type="text">
             </div>
-            <div class="two">
+            <div class="form">
+                <label for="last-name">Last Name</label>
+                <input type="text">
+            </div>
+            <div class="form">
                 <label for="phone-number">Phone Number</label>
                 <input type="number">
+            </div>
+            <div class="form">
                 <label for="email">Email Address</label>
                 <input type="email">
             </div>
-            <div class="three">
+            <div class="form">
                 <label for="state">State</label>
                 <select name="state" id="state">
                     <option value="uttarpradesh">Uttar Pradesh</option>
@@ -33,6 +38,8 @@
                     <option value="himanchalpradesh">Himanchal Pradesh</option>
                     <option value="maharastra">Maharastra</option>
                 </select>
+            </div>
+            <div class="form">
                 <label for="city">City</label>
                 <select name="city" id="city">
                     <option value="kanpur">Kanpur</option>
@@ -51,8 +58,14 @@
                     <option value="hydrabad">Hydrabad</option>
                 </select>
             </div>
-            <label for="address">Address</label>
-            <input type="text">
+            <div class="form full-width">
+                <label for="address">Address</label>
+                <input type="text">
+            </div>
+            <div class="form full-width">
+                <label for="notes">Notes</label>
+                <input type="text">
+            </div>
             <button class="submit">Submit</button>
         </form>
     </div>
