--- a/UI Day1/index.html
+++ b/UI Day1/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h2>Billing details</h2>
+        <h2>Contact details</h2>
         <form action="onlick()" class="billing-details">
             <div class="form">
                 <label for="first-name">First Name</label>
@@ -31,6 +31,7 @@
             <div class="form">
                 <label for="state">State</label>
                 <select name="state" id="state">
+                    <option value="" disabled selected>Select your State</option>
                     <option value="uttarpradesh">Uttar Pradesh</option>
                     <option value="madhyapradesh">Madhya Pradesh</option>
                     <option value="andrapradesh">Andra Pradesh</option>
@@ -42,6 +43,7 @@
             <div class="form">
                 <label for="city">City</label>
                 <select name="city" id="city">
+                    <option value="" disabled selected>Select your city</option>
                     <option value="kanpur">Kanpur</option>
                     <option value="fatehpur">Fatehpur</option>
                     <option value="Satara">Satara</option>
