card logo designed

--- a/UI Day2/index.html
+++ b/UI Day2/index.html
@@ -12,19 +12,21 @@
 <body>
     <div class="container">
         <div class="top">
-            <span class="back-icon">></span>
+            <img src="./images/right-arrow.png" alt="" class="right-arrow">
+            <!-- <span class="back-icon">></span> -->
             <h2>Add a card</h2>
             <p>Add your card details below</p>
         </div>
-        <div class="card-type1">
-            <p>card type</p>
-            <input type="radio">
-            <img src="" alt="visa">
-        </div>
-        <div class="card-type2">
-            <p>card type</p>
-            <input type="radio">
-            <img src="" alt="mastro">
+        <p class="Card-type-text">Card type</p>
+        <div class="card-type">
+            <div class="visa">
+                <input type="radio">
+                <img src="./images/visa.svg" alt="visa">
+            </div>
+            <div class="master">
+                <input type="radio">
+                <img src="./images/master.svg" alt="master">
+            </div>
         </div>
         <div class="basic-details">
             <lable>Cardholder's name</lable>
