--- a/UI Day2/index.html
+++ b/UI Day2/index.html
@@ -20,25 +20,29 @@
         <p class="Card-type-text">Card type</p>
         <div class="card-type">
             <div class="visa">
-                <input type="radio">
+                <input type="radio" class="radio">
                 <img src="./images/visa.svg" alt="visa">
             </div>
             <div class="master">
-                <input type="radio">
+                <input type="radio" class="radio">
                 <img src="./images/master.svg" alt="master">
             </div>
         </div>
         <div class="basic-details">
             <lable>Cardholder's name</lable>
-            <input type="text">
-            <img src="" alt="tickmark">
+            <div class="cName">
+                <input type="text" class="cName">
+                <img class="tickmark" src="./images/check.png" alt="tickmark">
+            </div>
             <lable>Password</lable>
-            <input type="password">
-            <img src="" alt="tickmark">
+            <div class="cPass">
+                <input type="password" class="cPass">
+                <img class='tickmark' src="./images/check.png" alt="tickmark">
+            </div>
         </div>
         <div class="secondary-details">
             <label for="expairy">expairy</label>
-            <input type="date" name="" id="">
+            <input type="month" pattern="mm/yyy" name="" id="" min="2023" max="2040">
             <label for="cvv">CVV</label>
             <input type="number">
             <label for="country">country</label>
